Table of content: Prevent links to overlap with background-image
Both links and background-image have a smiliar color of brown.
Thus, without this change the contrast was quite low.

--- a/inyoka_theme_ubuntuusers/static/style/markup.less
+++ b/inyoka_theme_ubuntuusers/static/style/markup.less
@@ -211,6 +211,7 @@ div.workinprogress {
 }
 .toc {
   padding: .5em;
+  padding-right: 9em; /* prevents brown links to overlap with brown background-image */
 
   @border-toc: 1px solid #E9C790;
   border-bottom: @border-toc;
